Add yearly_review_exclude_staff SiteSetting

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -5,6 +5,8 @@ plugins:
   yearly_review_categories:
     type: category_list
     default: ''
+  yearly_review_exclude_staff:
+    default: false
   yearly_review_publish_category:
     type: category
     default: ''
