Disable the plugin by default

--- a/config/settings.yml
+++ b/config/settings.yml
@@ -1,6 +1,6 @@
 plugins:
   yearly_review_enabled:
-    default: true
+    default: false
     client: true
   yearly_review_categories:
     type: category_list
